--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,10 +3,10 @@ description: a collection of stuff that isn't supposed to be written in the type
 theme: just-the-docs
 color_scheme: typehackery
 
-url: https://mchccn.github.io/typehackery
+url: https://k-tten.github.io/typehackery
 
 aux_links:
-    Repository: https://github.com/mchccn/typehackery
+    Repository: https://github.com/k-tten/typehackery
 
 search_enabled: true
 
